--- a/gallery-service/.gitignore
+++ b/gallery-service/.gitignore
@@ -1,9 +1,10 @@
-### Code-Java ###
-# Language Support for Java(TM) by Red Hat extension for Visual Studio Code - https://marketplace.visualstudio.com/items?itemName=redhat.java
+HELP.md
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**
+!**/src/test/**
 
-.project
-.classpath
-factoryConfiguration.json
+# Created by https://www.gitignore.io/api/java,gradle,intellij
+# Edit at https://www.gitignore.io/?templates=java,gradle,intellij
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -118,10 +119,6 @@ fabric.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-### Java-Web ###
-## ignoring target file
-target/
-
 ### Gradle ###
 .gradle
 build/
@@ -140,3 +137,5 @@ gradle-app.setting
 
 ### Gradle Patch ###
 **/build/
+
+# End of https://www.gitignore.io/api/java,gradle,intellij
