--- a/gallery-service/src/main/resources/application.properties
+++ b/gallery-service/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.jpa.database=POSTGRESQL
+spring.session.jdbc.initialize-schema=always
+spring.batch.initialize-schema=always
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
