--- a/gallery-service/src/main/resources/application.properties
+++ b/gallery-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.session.jdbc.initialize-schema=always
+spring.datasource.continue-on-error=true
 spring.batch.initialize-schema=always
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
@@ -6,7 +7,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+
+spring.thymeleaf.cache=false
