--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.session.jdbc.initialize-schema=always
 spring.datasource.continue-on-error=true
 spring.batch.initialize-schema=always
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username="postgres"
+spring.datasource.password="140297"
