--- a/server/build.gradle
+++ b/server/build.gradle
@@ -31,12 +31,20 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.hibernate.validator:hibernate-validator:6.1.6.Final'
 
+	implementation 'com.github.javafaker:javafaker:1.0.2'
+	implementation 'org.mindrot:jbcrypt:0.4'
+
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.0'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.0'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	runtimeOnly 'org.postgresql:postgresql'
 
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
+
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
