--- a/server/build.gradle
+++ b/server/build.gradle
@@ -41,10 +41,8 @@ dependencies {
 
 	runtimeOnly 'org.postgresql:postgresql'
 
-	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
-	implementation 'io.springfox:springfox-swagger2:2.9.2'
-
-	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
+	implementation 'org.apache.commons:commons-lang3:3.11'
+	implementation 'com.google.guava:guava:30.0-jre'
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
