--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 spring.session.jdbc.initialize-schema=always
 spring.datasource.continue-on-error=true
+spring.datasource.initialization-mode=always
 spring.batch.initialize-schema=always
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.initialization-mode=always
-spring.datasource.platform=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username="postgres"
-spring.datasource.password="140297"
+logging.level.org.hibernate.SQL= DEBUG
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.time-zone=UTC
