--- a/server/build.gradle
+++ b/server/build.gradle
@@ -6,6 +6,8 @@ plugins {
 
 group = 'com.safonov.galleryservice'
 version = '0.0.1-SNAPSHOT'
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 configurations {
 	developmentOnly
@@ -22,12 +24,10 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.hibernate.validator:hibernate-validator:6.1.6.Final'
 
@@ -41,6 +41,8 @@ dependencies {
 
 	runtimeOnly 'org.postgresql:postgresql'
 
+	implementation 'org.springdoc:springdoc-openapi-ui:1.5.1'
+	implementation 'com.auth0:java-jwt:3.11.0'
 	implementation 'org.apache.commons:commons-lang3:3.11'
 	implementation 'com.google.guava:guava:30.0-jre'
 
