--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,12 +1,15 @@
+server.port=8080
+server.servlet.context-path=/api
+
 spring.session.jdbc.initialize-schema=always
 spring.datasource.continue-on-error=true
 spring.datasource.initialization-mode=always
 spring.batch.initialize-schema=always
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-logging.level.org.hibernate.SQL= DEBUG
+logging.level.org.hibernate.SQL=DEBUG
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.time-zone=UTC
