--- a/server/build.gradle
+++ b/server/build.gradle
@@ -32,10 +32,12 @@ dependencies {
 	implementation 'org.hibernate.validator:hibernate-validator:6.1.6.Final'
 
 	implementation 'com.github.javafaker:javafaker:1.0.2'
-	implementation 'org.mindrot:jbcrypt:0.4'
 
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.0'
+	implementation 'com.fasterxml.jackson.core:jackson-core:2.12.0'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.0'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.0'
+	implementation 'org.modelmapper:modelmapper:2.3.8'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
