--- a/server/build.gradle
+++ b/server/build.gradle
@@ -51,13 +51,15 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	testImplementation 'org.testcontainers:postgresql:1.10.6'
+	testImplementation 'org.testcontainers:junit-jupiter:1.10.6'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.2'
-	testImplementation 'junit:junit:4.12'
 }
 
 test {
 	useJUnitPlatform()
 }
+
