--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,3 +10,6 @@ logging.level.org.hibernate.SQL=DEBUG
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.time-zone=UTC
+
+assm.app.jwtSecret=jwtAssmSecretKey
+assm.app.jwtExpiration=86400
