--- a/server/build.gradle
+++ b/server/build.gradle
@@ -21,9 +21,13 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven {
+		url = uri('https://plugins.gradle.org/m2/')
+	}
 }
 
 dependencies {
+	runtimeOnly project(':client')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
