--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "@vue/cli-service": "~4.5.0",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
+    "bootstrap-vue": "^2.21.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-router": "^3.4.9",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuex": "^3.6.0"
   },
   "eslintConfig": {
     "root": true,
