--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8080
+server.servlet.context-path=/api
+
 spring.session.jdbc.initialize-schema=always
 spring.datasource.continue-on-error=true
 spring.datasource.initialization-mode=always
