--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-server.servlet.context-path=/api
+server.servlet.context-path=/home
 
 spring.session.jdbc.initialize-schema=always
 spring.datasource.continue-on-error=true
