--- a/server/build.gradle
+++ b/server/build.gradle
@@ -21,13 +21,10 @@ configurations {
 
 repositories {
 	mavenCentral()
-	maven {
-		url = uri('https://plugins.gradle.org/m2/')
-	}
 }
 
 dependencies {
-	runtimeOnly project(':client')
+	//runtimeOnly project(':client')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -44,12 +41,15 @@ dependencies {
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.12.0'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.12.0'
 	implementation 'org.modelmapper:modelmapper:2.3.8'
+	implementation 'com.github.chhsiao90:modelmapper-module-java8-datatypes:1.2.1'
+	implementation 'com.github.chhsiao90:modelmapper-module-java8:1.2.1'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	runtimeOnly 'org.postgresql:postgresql'
 
 	implementation 'org.springdoc:springdoc-openapi-ui:1.5.1'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'com.auth0:java-jwt:3.11.0'
 	implementation 'org.apache.commons:commons-lang3:3.11'
 	implementation 'com.google.guava:guava:30.0-jre'
