--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 server.port=8080
-server.servlet.context-path=/home
 
 spring.session.jdbc.initialize-schema=always
 spring.datasource.continue-on-error=true
 spring.datasource.initialization-mode=always
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL10Dialect
 
 logging.level.org.hibernate.SQL=DEBUG
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.time-zone=UTC
+
+art-gallery.app.jwtSecret=artGallerySecretKey
+art-gallery.app.jwtExpirationMs=86400000
