--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -21,6 +20,7 @@
     "bootstrap-vue": "^2.21.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "vee-validate": "^3.4.5",
     "vue-router": "^3.4.9",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.6.0"
