--- a/client/package.json
+++ b/client/package.json
@@ -8,22 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
+    "core-js": "^2.6.5",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "vee-validate": "^2.2.15",
+    "vue-router": "^3.0.3",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "vuex": "^3.0.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "axios": "^0.21.1",
-    "babel-eslint": "^10.1.0",
-    "bootstrap-vue": "^2.21.1",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vee-validate": "^3.4.5",
-    "vue-router": "^3.4.9",
-    "vue-template-compiler": "^2.6.11",
-    "vuex": "^3.6.0"
+    "@vue/cli-plugin-babel": "~3.11.0",
+    "@vue/cli-service": "^4.5.9",
+    "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
     "root": true,
@@ -39,6 +40,11 @@
     },
     "rules": {
       "no-console": "off"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
     }
   },
   "browserslist": [
