--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL10Dial
 
 logging.level.org.hibernate.SQL=DEBUG
 
-spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
-spring.jackson.time-zone=UTC
+#spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+#spring.jackson.time-zone=UTC
 
 art-gallery.app.jwtSecret=artGallerySecretKey
 art-gallery.app.jwtExpirationMs=86400000
